--- a/ur5_move/CMakeLists.txt
+++ b/ur5_move/CMakeLists.txt
@@ -163,7 +163,7 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  scripts/move_group_python_interface_tutorial.py
+  scripts/cache_collector.py
   scripts/ur5_pick_place.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
